--- a/pro1/.classpath
+++ b/pro1/.classpath
@@ -5,6 +5,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="ch03ch04/EX02_if2.java" kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
