이클립스와 연동

--- a/P0923_1/.project
+++ b/P0923_1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>StudentManagerV2</name>
+	<name>P0923_1</name>
 	<comment></comment>
 	<projects>
 	</projects>
