--- a/java/.vscode/settings.json
+++ b/java/.vscode/settings.json
@@ -4,5 +4,5 @@
     "java.project.referencedLibraries": [
         "lib/**/*.jar"
     ],
-    "java.dependency.packagePresentation": "flat"
+    "java.dependency.packagePresentation": "hierarchical"
 }
